[package]
name = "object-space"
version = "0.1.0"
authors = ["tmt <mt12@williams.edu>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/tmt96/rs-object-space"
description = """
This crate is an implementation of ObjectSpace - a natural progression on the idea of [TupleSpace](https://en.wikipedia.org/wiki/Tuple_space) proposed by Gelernter in 1985. ObjectSpace is a data structure with the capability of holding any structure (e.g: a string, an int, and a complex struct could all lives under one ObjectSpace). It also allows retrieving a struct based on the value of a field.

This crate also provides a fully thread-safe implementation of ObjectSpace, which allows simple concurrent and distributed programming.
"""


[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
ordered-float = "0.5"
chashmap = "2.2"
indexmap = "1.0"

[dev-dependencies]
chrono = "0.4"
image = "0.18"
