[package]
name = "object-space"
version = "0.1.1"
authors = ["tmt <mt12@williams.edu>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/tmt96/rs-object-space"
description = """
An object store library for highly concurrent program written in Rust.
"""
exclude = [
    "paper/*.pdf"
]
keywords = ["concurrent", "parallel", "tuple-space", "object-space", "linda"]
categories = ["concurrency", "data-structures"]
readme = "README.md"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
ordered-float = "0.5"
chashmap = "2.2"
indexmap = "1.0"

[dev-dependencies]
chrono = "0.4"
image = "0.18"
